--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ google-api-core==1.16.0
 google-api-python-client==1.8.0
 google-auth==1.13.1
 google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
 googleapis-common-protos==1.51.0
 gTTS==2.1.1
 gTTS-token==1.1.3
@@ -27,6 +28,7 @@ moviepy==1.0.2
 networkx==2.4
 numpy==1.18.2
 oauth2client==4.1.3
+oauthlib==3.1.0
 opencv-python==4.2.0.34
 pandas==1.0.3
 Pillow==7.1.1
@@ -41,6 +43,7 @@ python-dateutil==2.8.1
 pytz==2019.3
 PyWavelets==1.1.1
 requests==2.23.0
+requests-oauthlib==1.3.0
 rsa==4.0
 scikit-image==0.16.2
 scipy==1.4.1
@@ -55,3 +58,4 @@ waitress==1.4.3
 WebOb==1.8.6
 WebTest==2.0.34
 wikipedia==1.4.0
+Wikipedia-API==0.5.4
