--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+absl-py==0.9.0
+astor==0.8.1
 beautifulsoup4==4.8.2
 cachetools==4.0.0
 cairocffi==1.1.0
@@ -8,21 +10,28 @@ click==7.1.1
 cryptography==2.9
 cycler==0.10.0
 decorator==4.4.2
+gast==0.3.3
 gizeh==0.1.11
 google-api-core==1.16.0
 google-api-python-client==1.8.0
 google-auth==1.13.1
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
 googleapis-common-protos==1.51.0
+grpcio==1.28.1
 gTTS==2.1.1
 gTTS-token==1.1.3
+h5py==2.10.0
 httplib2==0.17.1
 idna==2.9
 imageio==2.8.0
 imageio-ffmpeg==0.4.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
 lxml==4.5.0
+Markdown==3.2.1
 matplotlib==3.2.1
 moviepy==1.0.2
 networkx==2.4
@@ -37,6 +46,7 @@ protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pydub==0.23.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -50,6 +60,10 @@ scipy==1.4.1
 selenium==3.141.0
 six==1.14.0
 soupsieve==2.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
 tqdm==4.45.0
 uritemplate==3.0.1
 urllib3==1.25.8
@@ -57,5 +71,7 @@ user-agent==0.1.9
 waitress==1.4.3
 WebOb==1.8.6
 WebTest==2.0.34
+Werkzeug==1.0.1
 wikipedia==1.4.0
 Wikipedia-API==0.5.4
+wrapt==1.12.1
