--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.9.0
 astor==0.8.1
+audioread==2.1.8
 beautifulsoup4==4.8.2
 cachetools==4.0.0
 cairocffi==1.1.0
@@ -27,14 +28,18 @@ httplib2==0.17.1
 idna==2.9
 imageio==2.8.0
 imageio-ffmpeg==0.4.1
+joblib==0.14.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
+librosa==0.7.2
+llvmlite==0.31.0
 lxml==4.5.0
 Markdown==3.2.1
 matplotlib==3.2.1
 moviepy==1.0.2
 networkx==2.4
+numba==0.48.0
 numpy==1.18.2
 oauth2client==4.1.3
 oauthlib==3.1.0
@@ -47,6 +52,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pydub==0.23.1
+pygame==1.9.6
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -54,11 +60,14 @@ pytz==2019.3
 PyWavelets==1.1.1
 requests==2.23.0
 requests-oauthlib==1.3.0
+resampy==0.2.2
 rsa==4.0
 scikit-image==0.16.2
+scikit-learn==0.22.2.post1
 scipy==1.4.1
 selenium==3.141.0
 six==1.14.0
+SoundFile==0.10.3.post1
 soupsieve==2.0
 tensorboard==1.14.0
 tensorflow==1.14.0
