--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ LJ_logdir/
 # Ignore Images Directory
 *.jpg
 *.png
-images/
-url_files/
+data/images/
+data/url_files/
 
 # Ignore virtual Environments
 youtube_upload/
