specifying firefox-geckodriver in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 addons:
   apt:
     packages:
-      - geckodriver
+      - firefox-geckodriver
 install:
   - "pip install pipenv pytest"
   - "pipenv install"
