--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ LJ_logdir/
 *.png
 data/images/
 data/url_files/
-tests/data/*
+tests/data/images/*
+tests/data/url_files/*
 
 # Ignore virtual Environments
 youtube_upload/
