--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
   apt:
     packages:
       - firefox-geckodriver
+      - ffmpeg
 install:
   - "pip install pipenv pytest"
   - "pipenv install"
