--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ LJ_logdir/
 *.wav
 *.mp3
 *.mp4
+*.aiff
 
 # Ignore Images Directory
 *.jpg
@@ -24,7 +25,7 @@ env/
 *.idea/
 
 # Ignore access files
-*oauth-2.json
+*oauth2.json
 *client_secrets.json
 
 # Byte-compiled / optimized / DLL files
