--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ addons:
     packages:
     - firefox-geckodriver
     - ffmpeg
+    - imagemagick
 before_install:
 - openssl aes-256-cbc -K $encrypted_77644dcdfd96_key -iv $encrypted_77644dcdfd96_iv -in upload_video.py-oauth2.json.enc -out wiki_movie/upload_video.py-oauth2.json -d
 - openssl aes-256-cbc -K $encrypted_a789e8191f70_key -iv $encrypted_a789e8191f70_iv -in client_secrets.json.enc -out wiki_movie/client_secrets.json -d
+- "identify -list policy | grep 'policy.xml' | sed 's/^.*: //'  | xargs sed -i '/domain="path"/d'"
 install:
 - pip install pipenv pytest
-- pipenv install
+- pipenv sync
 script: python -m pytest tests/
