--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     - firefox-geckodriver
     - ffmpeg
     - imagemagick
+    - openssl
 before_install:
 - openssl aes-256-cbc -K $encrypted_77644dcdfd96_key -iv $encrypted_77644dcdfd96_iv
   -in upload_video.py-oauth2.json.enc -out wiki_movie/upload_video.py-oauth2.json
