--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     - imagemagick
 install:
 - pip install pipenv pytest
-- pipenv install --dev
+- pipenv install --skip-lock
 script: python -m pytest tests/
 before_install:
 - openssl aes-256-cbc -K $encrypted_a789e8191f70_key -iv $encrypted_a789e8191f70_iv -in client_secrets.json.enc -out wiki_movie/client_secrets.json -d
