install espeak for linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     - firefox-geckodriver
     - ffmpeg
     - imagemagick
+    - espeak
 install:
 - pip install pipenv pytest
 - pipenv install --skip-lock
