--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-numpy~=1.20.1
-pandas~=1.2.2
-
-tqdm~=4.57.0
-moviepy~=1.0.3
-pyttsx3~=2.90
-pydub~=0.24.1
-httplib2~=0.19.0
-apiclient~=1.0.4
-oauth2client~=4.1.3
-selenium~=3.141.0
-gTTS~=2.2.2
 google-api-python-client~=1.12.8
+gTTS~=2.2.2
+httplib2~=0.19.0
+lxml~=4.6.2
+moviepy~=1.0.3
+numpy~=1.20.1
+oauth2client~=4.1.3
+opencv-python-headless~=4.5.1.48
+pandas~=1.2.2
+pydub~=0.24.1
+pyttsx3~=2.90
+selenium~=3.141.0
+SoundFile==0.10.3.post1
+tqdm~=4.57.0
+user-agent~=0.1.9
+Wikipedia-API~=0.5.4
